# opengl_by_cherno

./: .gitignore  CMakeLists.txt  README.md
OpenGL/: OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/Debug/: OpenGL.exe.recipe  OpenGL.ilk  OpenGL.vcxproj.FileListAbsolute.txt  source.obj.enc  vc142.idb
OpenGL/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL/resource/shader/: basic.shader
OpenGL/src/: Source.cpp
include/: GLDebug.h  indexBuffer.h  renderer.h  shader.h  texture.h  vertexArray.h  vertexBuffer.h
res/shader/: basic.shader
src/: GLDebug.cpp  Source.cpp  indexBuffer.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
test/: app.cpp  application.cpp  application.h
